# MatrixLibrary

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp  matrix.cpp  matrix.h
src/src/: matrix.cpp  matrix.h
src/test/: matrix_test.cpp
test/: matrix_test.cpp
